--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -7,6 +7,7 @@ $color-grey-dark: #777;
 $color-primary-white: #fff;
 $color-black: #000;
 
+$color-grey-light-1: #f7f7f7;
 
 //Grid
 $grid-width: 114rem;
