--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -7,7 +7,14 @@ $color-grey-dark: #777;
 $color-primary-white: #fff;
 $color-black: #000;
 
+$color-secondary-dark: #ffb900;
+$color-secondary-light: #ff7730;
+
+$color-tertiary-dark: #2998ff;
+$color-tertiary-light: #5643fa;
+
 $color-grey-light-1: #f7f7f7;
+$color-grey-light-2: #eee;
 
 //Font
 $default-font-size: 1.6rem;
