--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -21,3 +21,9 @@
         transform: skewY(7deg);
     }
 }
+
+.section-tour{
+    background-color: $color-grey-light-1;
+    padding: 25rem 0;
+    margin-top: -8rem;
+}
