--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -35,6 +35,15 @@
         }
     }
 
+    &--green{
+        background-color: $color-primary;
+        color: $color-primary-white;
+
+        &::after{
+            background-color: $color-primary;
+        }
+    }
+    
     &::after{
         content: "";
         display: inline-block;
