--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -24,6 +24,11 @@
 
 .section-tour{
     background-color: $color-grey-light-1;
-    padding: 25rem 0;
+    padding: 25rem 0 15rem 0;
     margin-top: -8rem;
+}
+
+.section-stories{
+    padding: 15rem 0;
+    background-color: $color-grey-light-1;
 }
