Story Section Completed

--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -29,6 +29,9 @@
 }
 
 .section-stories{
+    // overflow: hidden;
     padding: 15rem 0;
-    background-color: $color-grey-light-1;
+    // background-color: $color-grey-light-1;
+    position: relative;
+
 }
