--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -12,3 +12,49 @@
     left: 50%;
     transform: translate(-50% , -50%);
 }
+
+// Media Query Manager
+/*
+0 - 600px:      Phone
+600px - 900px:  Tablet portrait
+900px - 1200px  Tablet landscape
+[1200 - 1800] is where out normal styles apply
+1800px + :      Big Desktop
+*/ 
+
+// $breakpoint argument choices:
+// - phone
+// - tab-portrait
+// - tab-landscape
+// - big-desktop
+
+// ORDER:   Base + Typhography > general layout + grid > page layout > components
+
+//  1rem = 16px
+
+@mixin respond($breakpoint){
+
+    @if ($breakpoint == phone){
+        @media (max-width: 37.5em) {        //600px
+            @content;
+        }
+    }
+
+    @if ($breakpoint == tab-portrait){
+        @media (max-width: 56.25em) {         //900px
+            @content;
+        }
+    }
+
+    @if ($breakpoint == tab-landscape){
+        @media (max-width: 75em) {          //1200px
+            @content;
+        }
+    }
+
+    @if ($breakpoint == big-desktop){
+        @media (min-width: 112.5em) {        //1800px
+            @content;
+        }
+    }
+}
