--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -3,7 +3,6 @@ body{
     font-weight: 400;
     line-height: 1.7;
     color: $color-grey-dark;
-    padding: 3rem;
 }
 
 .heading-primary{
@@ -21,9 +20,11 @@ body{
         animation-name: moveInLeft;
         animation-duration: 1s;
         animation-timing-function: ease-out;
-        /* animation-delay: 3s;
-        animation-iteration-count: 3;
-        animation-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); */
+        
+        @include respond(phone){
+            letter-spacing: 1rem;
+            font-size: 5rem;
+        }
     }
     
     &--sub{
@@ -32,6 +33,10 @@ body{
         letter-spacing: 1.7rem;
         font-weight: 400;
         animation: moveInRight 1s ease-out;
+
+        @include respond(phone){
+            letter-spacing: .5rem;
+        }
     }
 }
 
@@ -45,6 +50,14 @@ body{
     color: transparent;
     letter-spacing: .2rem;
     transition: all .2s;
+
+    @include respond(tab-portrait){
+        font-size: 3rem;
+    }
+
+    @include respond(phone){
+        font-size: 2.5rem;
+    }
 
     &:hover{
         transform: skewY(2deg) skew(15deg) scale(1.1);
