--- a/sass/layouts/_navigation.scss
+++ b/sass/layouts/_navigation.scss
@@ -17,6 +17,16 @@
         text-align: center;
         cursor: pointer;
 
+        @include respond(tab-portrait){
+            top: 4rem;
+            right: 4rem;
+        }
+
+        @include respond(phone){
+            top: 3rem;
+            right: 3rem;
+        }
+
     }
 
     &__background{
@@ -29,7 +39,11 @@
         background-image: radial-gradient($color-primary-light , $color-primary-dark);
         z-index: 1000;
         transition: transform .8s cubic-bezier(0.65, 0, 0.35, 1);        
-        // transform: scale(80);
+      
+        @include respond(tab-portrait){
+            top: 4.5rem;
+            right: 4.5rem;
+        }
     }
 
     &__nav{
