--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -43,12 +43,12 @@
 
 .book{
     background-image: linear-gradient(105deg, 
-            // rgba($color-primary-white , 0.9) 0%,
+            rgba($color-primary-white , 0.9) 0%,
             rgba($color-primary-white , 0.9) 50%,
             transparent 50%),
      url(/img/nat-10.jpg);
     background-size: 100%;
-    height: 50rem;
+    // height: 50rem;
     border-radius: 3px;
     box-shadow: 0 1.5rem 4rem rgba($color-black, .2);
 
