--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -2,6 +2,10 @@
     background-color: $color-grey-light-1;
     padding: 25rem 0;
     margin-top: -20rem;
+
+    @include respond(tab-portrait){
+        padding: 20rem 0;
+    }
 }
 
 .section-features{
@@ -20,12 +24,20 @@
     & > *{
         transform: skewY(7deg);
     }
+
+    @include respond(tab-portrait){
+        padding: 15rem 0;
+    }
 }
 
 .section-tour{
     background-color: $color-grey-light-1;
     padding: 25rem 0 15rem 0;
     margin-top: -8rem;
+
+    @include respond(tab-portrait){
+        padding: 20rem 0 10rem 0;
+    }
 }
 
 .section-stories{
@@ -34,11 +46,19 @@
     // background-color: $color-grey-light-1;
     position: relative;
 
+    @include respond(tab-portrait){
+        padding: 10rem 0;
+    }
+
 }
 
 .section-book{
     padding: 15rem 0;
     background-image: linear-gradient(to right bottom , $color-primary-light , $color-primary-dark);
+
+    @include respond(tab-portrait){
+        padding: 10rem 0;
+    }
 }
 
 .book{
