--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -3,7 +3,7 @@
     &__group:not(:last-child){
         margin-bottom: 2rem;
     }
- 
+
     &__input{
         font-size: 1.5rem;
         padding: 1.5rem 2rem;
@@ -16,6 +16,10 @@
         display: block;
         width: 90%;
         transition: all .3s;
+
+        @include respond(tab-portrait){
+            width: 100%;
+        }
 
         &:focus{
             outline: none;
@@ -52,6 +56,11 @@
         // float: left;
         width: 49%;
         display: inline-block;
+
+        @include respond(tab-portrait){
+            width: 100%;
+            margin-bottom: 2rem;
+        }
     }
 
     &__radio-input{
