--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -72,8 +72,33 @@
     border-radius: 3px;
     box-shadow: 0 1.5rem 4rem rgba($color-black, .2);
 
+    @include respond(tab-landscape){
+        background-image: linear-gradient(105deg, 
+            rgba($color-primary-white , 0.9) 0%,
+            rgba($color-primary-white , 0.9) 65%,
+            transparent 65%),
+     url(/img/nat-10.jpg);
+     background-size: cover;
+    }
+
+    @include respond(tab-portrait){
+        background-image: linear-gradient(to right, 
+            rgba($color-primary-white , 0.9) 0%,
+            rgba($color-primary-white , 0.9) 100%),
+     url(/img/nat-10.jpg);
+     background-size: cover;
+    }
+
     &__form{
         width: 50%;
         padding: 6rem;
+
+        @include respond(tab-landscape){
+            width: 65%;
+        }
+
+        @include respond(tab-portrait){
+            width: 100%;
+        }
     }
 }
