--- a/css/style.css
+++ b/css/style.css
@@ -98,6 +98,7 @@ body {
   font-weight: 700;
   display: inline-block;
   background-image: linear-gradient(to right, #7ed56f, #28b485);
+  background-clip: text;
   -webkit-background-clip: text;
   color: transparent;
   letter-spacing: .2rem;
@@ -419,8 +420,7 @@ body {
     display: inline-block;
     background-image: linear-gradient(to right, #7ed56f, #28b485);
     -webkit-background-clip: text;
-    color: transparent;
-    opacity: 1; }
+    color: transparent; }
     @media (max-width: 56.25em) {
       .feature-box__icon {
         margin-bottom: 0; } }
