--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -11,11 +11,11 @@ $color-grey-dark-3: #333;
 $color-primary-white: #fff;
 $color-black: #000;
 
-$color-secondary-dark: #ffb900;
-$color-secondary-light: #ff7730;
+$color-secondary-dark: #ff7730;
+$color-secondary-light: #ffb900;
 
-$color-tertiary-dark: #2998ff;
-$color-tertiary-light: #5643fa;
+$color-tertiary-dark: #5643fa;
+$color-tertiary-light: #2998ff;
 
 $color-grey-light-1: #f7f7f7;
 $color-grey-light-2: #eee;
