--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -20,20 +20,20 @@
         &--front{
             background-color: white;
         }
-    
+
         &--back{
             transform: rotateY(180deg);
             
             &-1{
-                background-image: linear-gradient(to right , $color-secondary-light , $color-secondary-dark);
+                background-image: linear-gradient(to right bottom , $color-secondary-light, $color-secondary-dark);
             }
 
             &-2{
-                background-image: linear-gradient(to right , $color-primary-light , $color-primary-dark);
+                background-image: linear-gradient(to right bottom, $color-primary-light , $color-primary-dark);
             }
 
             &-3{
-                background-image: linear-gradient(to right , $color-tertiary-light , $color-tertiary-dark);
+                background-image: linear-gradient(to right bottom, $color-tertiary-light , $color-tertiary-dark);
             }
         }
     }
